# sisyphos-kernel-uefi-x86_64

./: Cargo.toml  Makefile  README.md  Xargo.toml  x86_64-sisyphos-uefi.json
liballoc_system/: Cargo.toml
liballoc_system/src/: lib.rs
src/: cdefs.rs  crt0-efi-x86_64.S  elf_x86_64_efi.lds  lib.rs  panic.rs  platform.rs  relocate.rs  rt_stubs.rs  sys.rs
src/memory/: buddy_alloc.rs  heap.rs  list_alloc.rs  list_alloc_simple.rs  mod.rs  paging.rs
